Added link in footer to open source code

--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
         </div>
       </div>
 
-      <footer>This page was built by Sophie Bradley</footer>
+      <footer>
+        <a href="https://github.com/sophbradley/Weather-App" target="_blank"
+          >Open source code</a
+        >
+        by Sophie Bradley
+      </footer>
       <script src="src/script.js"></script>
     </body>
   </div>
